--- a/PSWH.html
+++ b/PSWH.html
@@ -3,21 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kreis-Clickspiel</title>
+    <title>PSWH-Gruppe 6</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="header">
-        <h1>Klick die Flächen in der richtigen Reihenfolge!</h1>
+        PSWH-Gruppe 6 Schlüsseleingabe
     </div>
     <div class="container">
         <div id="circle">
-            <!-- Dynamisch erzeugte Flächen -->
+            <div class="section">1</div>
+            <div class="section">2</div>
+            <div class="section">3</div>
+            <div class="section">4</div>
+            <div class="section">5</div>
+            <div class="section">6</div>
+            <div class="section">7</div>
+            <div class="section">8</div>
+            <div class="section">9</div>
+            <div class="section">10</div>
+            <div class="section">11</div>
+            <div class="section">12</div>
         </div>
+        <div id="history"></div>
         <div id="message"></div>
-        <div id="history">
-            <!-- Historie der Klicks -->
-        </div>
     </div>
     <script src="script.js"></script>
 </body>
