--- a/PSWH.html
+++ b/PSWH.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PSWH-Gruppe 6</title>
+    <title>PSWH Gruppe 6</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="header">
-        PSWH-Gruppe 6 Schlüsseleingabe
+        Schlüsseleingabe Gruppe 6
     </div>
     <div class="container">
         <div id="circle">
@@ -25,8 +25,8 @@
             <div class="section">11</div>
             <div class="section">12</div>
         </div>
-        <div id="history"></div>
         <div id="message"></div>
+        <div id="history"></div>
     </div>
     <script src="script.js"></script>
 </body>
