--- a/PSWH.html
+++ b/PSWH.html
@@ -28,6 +28,6 @@
         <div id="message"></div>
         <div id="history"></div>
     </div>
-    <script src="script.js"></script>
+    <script src="JS/script.js"></script>
 </body>
 </html>
