--- a/PSWH.html
+++ b/PSWH.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- 
+           Metadaten der Seite
+        -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PSWH Gruppe 6</title>
@@ -11,6 +14,9 @@
         Schlüsseleingabe Gruppe 6
     </div>
     <div class="container">
+        <!-- 
+           Die 12 Felder zum anklicken der Lösung
+        -->
         <div id="circle">
             <div class="section">1</div>
             <div class="section">2</div>
@@ -25,6 +31,9 @@
             <div class="section">11</div>
             <div class="section">12</div>
         </div>
+        <!-- 
+           Dynamisch erzeugte Elemente durch das eingebundene Script.
+        -->
         <div id="message"></div>
         <div id="history"></div>
     </div>
